change logo and name of website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dqo56owj9/image/upload/v1739679986/DALL_E_2025-02-16_09.54.56_-_A_3D_logo_for_a_food_delivery_app_featuring_a_futuristic_and_modern_design._The_logo_includes_a_stylized_food_delivery_box_with_motion_lines_to_indic_vpzjoy.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foodies</title>
   </head>
